--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="footer">Terima Kasih Telah Bermain Game Saya<br>@d.arsya_</div>
     <div class="medsos">
         <ul class="medlist">
-            <a target="_blank" href="https://github.com/d-arsya/d-arsya.github.io/blob/3d26728fd9da443a3fc808f62d053e7d16b61b9f/utama.html"><div class="telegram"></div></a>
+            <a target="_blank" href="https://d-arsya.github.io/utama.html"><div class="telegram"></div></a>
             <a target="_blank" href="https://www.instagram.com/d.arsya_/"><div class="instagram"></div></a>
             <a target="_blank" href="mailto:kamaluddin.arsyad17@gmail.com"><div class="gmail"></div></a>
             <a target="_blank" href="https://wa.me/6285161170334"><div class="whatsapp"></div></a>
