--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
  <title>Game Suwit</title>
 </head>
 <body>
+ <audio src="lagu.mp3" autoplay loop></audio>
 <div class="container">
     <div class="header">Game Suwit Sederhana</div>
     <div class="comp">
