--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
  <title>Game Suwit</title>
 </head>
 <body>
- <audio src="lagu.mp3" autoplay loop></audio>
 <div class="container">
     <div class="header">Game Suwit Sederhana</div>
     <div class="comp">
@@ -29,7 +28,7 @@
     <div class="footer">Terima Kasih Telah Bermain Game Saya<br>@d.arsya_</div>
     <div class="medsos">
         <ul class="medlist">
-            <a target="_blank" href="https://d-arsya.github.io/utama.html"><div class="telegram"></div></a>
+            <a target="_blank" href="https://t.me/d_arsya"><div class="telegram"></div></a>
             <a target="_blank" href="https://www.instagram.com/d.arsya_/"><div class="instagram"></div></a>
             <a target="_blank" href="mailto:kamaluddin.arsyad17@gmail.com"><div class="gmail"></div></a>
             <a target="_blank" href="https://wa.me/6285161170334"><div class="whatsapp"></div></a>
