--- a/zonk.html
+++ b/zonk.html
@@ -67,7 +67,7 @@
   <script type="text/javascript" charset="utf-8">
   const teks = document.querySelector("h1");
         let i = 0;
-        let kata = ["Selamat Datang","di WebPage","Kegabutan","disini anda harus bersiap","menerima konsekuensi","karena","karena....","karena...",".....","TERSERAH SAYA LAH","Gak....canda aj","dah, ngapain masih disini ??","pergi sana","sia2 waktumu disini","tinggalin aj","ngeyel ih"]
+        let kata = ["Assalamualaikum","Menjelang hari Raya Idul Fitri ini","persilahkan saya","meminta maaf","atas segala perbuatan","yang tidak berkenan di hati","ataupun di....","apa ya...","entahlah","intinya Mohon Maaf Lahir Batin","Semoga amal perbuatan selama Ramadhan diterima","oleh Allah SWT","Aamiin","Terima Kasih","telah membuang waktunya untuk membaca ini","dah cukup buang waktunya","pergi sana","😜"]
       setInterval(function(){
         if(i<kata.length){
         teks.innerHTML=kata[i];
