--- a/zonk.html
+++ b/zonk.html
@@ -11,7 +11,8 @@
       width: 100%;
       font-family: 'Radio Canada', sans-serif;
       text-align: center;
-      font-size:50px;
+      font-size:36px;
+      line-height:54px;
     }
     body{
       display: flex;
