--- a/zonk.html
+++ b/zonk.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>Ied Mubarak 1443 | @d.arsya_</title>
   <style>
   @import url('https://fonts.googleapis.com/css2?family=Radio+Canada:wght@600&display=swap');
     h1{
