--- a/zonk.html
+++ b/zonk.html
@@ -68,7 +68,7 @@
   <script type="text/javascript" charset="utf-8">
   const teks = document.querySelector("h1");
         let i = 0;
-        let kata = ["Assalamualaikum","di hari Raya Idul Fitri ini","persilahkan saya","meminta maaf","atas segala perbuatan","yang tidak berkenan di hati","ataupun di....","apa ya...","entahlah","intinya Mohon Maaf Lahir Batin","Semoga amal kita diterima oleh","Allah SWT /n Aamiin","Terima Kasih","telah membuang waktunya untuk membaca ini","dah cukup buang waktunya","pergi sana","😜"]
+        let kata = ["Assalamualaikum","di hari Raya Idul Fitri ini","persilahkan saya","meminta maaf","atas segala perbuatan","yang tidak berkenan di hati","ataupun di....","apa ya...","entahlah","intinya Mohon Maaf Lahir Batin","Semoga amal kita diterima oleh",`Allah SWT /n Aamiin`,"Terima Kasih","telah membuang waktunya untuk membaca ini","dah cukup buang waktunya","pergi sana","😜"]
       setInterval(function(){
         if(i<kata.length){
         teks.innerHTML=kata[i];
