--- a/profil.html
+++ b/profil.html
@@ -724,7 +724,7 @@
             </div>
         </div>
         <div class="lastFooter">
-            <h4>&copy;2022 ibshidayatullah All rights reserved</h4>
+            <h4>&copy;2022 ibshidayatullah All rights reserved by : <a href="https://instagram.com/d.arsya_">@d.arsya_</a></h4>
         </div>
     </footer>
     <script src="all.js"></script>
