--- a/psb.html
+++ b/psb.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/all.css">
-    <link rel="stylesheet" href="../style/index.css">
+    <link rel="stylesheet" href="all.css">
+    <link rel="stylesheet" href="index.css">
     <title>Selamat Datang di  Official MTs-MA Hidayatullah Jogjakarta &#8211; Mewujudkan generasi muda yang berwawasan luas, berfikir cerdas,berkata lugas, bekerja tuntas, dan berbuat ikhlas.</title>
 </head>
 <body>
@@ -103,7 +103,7 @@
         </div>
     </footer>
    
-    <script src="../script/all.js"></script>
-    <script src="../script/index.js"></script>
+    <script src="all.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
