--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="card">
             <div class="topCard">
-                <div class="profile">
+                <div class="bio">
                     <img src="https://raw.githubusercontent.com/d-arsya/resource/alumni/arsyad.jpg" alt="">
                     <a href="https://instagram.com/d.arsya_" class="igLink">@d.arsya_</a>
                 </div>
@@ -21,8 +21,10 @@
                 <div class="messageForm">
                     <form name="secret-message">
                         <textarea name="message" id="message" maxlength="200" placeholder="Type here..." required></textarea>
+                        <input type="text" name="time" id="time" value="">
                         <div class="secondTip">send anonymous message to him</div>
                         <button type="submit" class="submit">Launch</button>
+                        <div class="btn hide"><div></div><div></div><div></div><div></div></div>
                     </form>
                 </div>
                 <div class="question">
