--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
                         <input type="text" name="time" id="time" value="">
                         <div class="secondTip">send anonymous message to him</div>
                         <button type="submit" class="submit">Launch</button>
+                        <a href="https://wa.me/6285161170334"><div class="wa1 submit">WhatsApp</div></a>
                         <div class="btn hide"><div></div><div></div><div></div><div></div></div>
                     </form>
                 </div>
                 <div class="question">
-                    <button type="submit" class="reLaunch quest">Re-Launch</button>
-                    <button type="submit" class="finish quest">Finish</button>
+                    <button class="reLaunch quest">Re-Launch</button>
+                        <a href="https://wa.me/6285161170334"><div class="wa2 quest">WhatsApp</div></a>
+                    <button class="finish quest">Finish</button>
                 </div>
 
             </div>
