--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                         <textarea name="message" id="message" maxlength="200" placeholder="Type here..." required></textarea>
                         <input type="text" name="time" id="time" value="">
                         <div class="secondTip">send anonymous message to him</div>
-                        <button type="submit" class="submit">Launch</button>
+                        <button type="submit" class="submit">Send</button>
                         <a href="https://wa.me/6285161170334"><div class="wa1 submit">WhatsApp</div></a>
                         <div class="btn hide"><div></div><div></div><div></div><div></div></div>
                     </form>
                 </div>
                 <div class="question">
-                    <button class="reLaunch quest">Re-Launch</button>
+                    <button class="reLaunch quest">Re-Send</button>
                         <a href="https://wa.me/6285161170334"><div class="wa2 quest">WhatsApp</div></a>
-                    <button class="finish quest">Finish</button>
+                    <button class="finish quest">Done</button>
                 </div>
 
             </div>
