--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>anymes v1.0</title>
     <link rel="stylesheet" href="styleSecret.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/favicon-16x16.png">
+    <link rel="manifest" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/site.webmanifest">
 </head>
 <body>
     <div class="container">
