--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>ANYMES || @d.arsya_ ©2022</title>
     <link rel="stylesheet" href="styleSecret.css">
 <!--     <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/favicon-32x32.png"> -->
-        <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/1.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/1.jpg">
     <link rel="manifest" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/site.webmanifest">
 </head>
 <body>
