--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ANYMES || @d.arsya_ ©2022</title>
     <link rel="stylesheet" href="styleSecret.css">
-<!--     <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/favicon-32x32.png"> -->
-        <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/1.jpg">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/favicon-32x32.png">
     <link rel="manifest" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/site.webmanifest">
 </head>
 <body>
