--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ANYMES || @d.arsya_ ©2022</title>
+    <title>Say goodbye to 2022</title>
     <link rel="stylesheet" href="styleSecret.css">
     <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/favicon-32x32.png">
     <link rel="manifest" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/site.webmanifest">
