--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
                 </div>
 
             </div>
+            <div class="quoteCard">
+                <h2 class="quote">Quotes of the Day</h2>
+                <h2 class="author"></h2>
+            </div>
         </div>
         <div class="footer">
             <div class="jam">88.88.88</div>
@@ -42,5 +46,6 @@
         </div>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="scriptSecret.js"></script>
 </html>
