--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="footer">
             <div class="jam">88.88.88</div>
-            <div class="footerTip">anymes &#169 2022</div>
+            <div class="footerTip">Let's go beyond &#169 Toyota</div>
         </div>
     </div>
 </body>
