--- a/suwitIndex.html
+++ b/suwitIndex.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="suwitUpload.css">
+ <link rel="stylesheet" href="suwitStyle.css">
  <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Limelight&family=Sigmar+One&display=swap" rel="stylesheet">
  <title>Game Suwit</title>
@@ -36,6 +36,6 @@
         </ul>
     </div>
 </div>
- <script src="suwitUpload.js"></script>   
+ <script src="suwitScript.js"></script>   
 </body>
 </html>
