--- a/kuliahIndex.html
+++ b/kuliahIndex.html
@@ -15,6 +15,6 @@
         <article></article>
     </main>
     <footer></footer>
-    <script src="script/kuliahScript.js"></script>
+    <script src="kuliahScript.js"></script>
 </body>
 </html>
