--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Goodbye 2022</title>
-    <link rel="stylesheet" href="styleSecret.css">
+    <link rel="stylesheet" href="secretStyle.css">
     <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/favicon-32x32.png">
     <link rel="manifest" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/site.webmanifest">
 </head>
@@ -48,5 +48,5 @@
     </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<script src="scriptSecret.js"></script>
+<script src="secretScript.js"></script>
 </html>
