--- a/1.html
+++ b/1.html
@@ -8,7 +8,17 @@
 </head>
 <body>
   <script>
-    document.write(window.opener)
+  function getLocation() {
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(showPosition);
+  } 
+}
+let x;
+function showPosition(position) {
+  document.write("Latitude: " + position.coords.latitude +
+  "<br>Longitude: " + position.coords.longitude)
+}
+getLocation()
   </script>
 </body>
 </html>
