--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
                 <div class="messageForm">
                     <form name="secret-message">
                         <textarea name="message" id="message" maxlength="200" placeholder="Type here..." required></textarea>
-                        <input type="text" name="time" id="time" value="">
-                        <input type="text" name="device" id="device" value="">
+                        <input type="text" class="info" name="time" id="time" value="">
+                        <input type="text" class="info" name="device" id="device" value="">
+                        <input type="text" class="info" name="isp" id="isp" value="">
+                        <input type="text" class="info" name="city" id="city" value="">
+                        <input type="text" class="info" name="ip" id="ip" value="">
                         <div class="secondTip">send anonymous message to him</div>
                         <button type="submit" class="submit">Send</button>
                         <div class="btn hide"><div></div><div></div><div></div><div></div></div>
