--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Goodbye 2022</title>
+    <title>Sunday Monday</title>
     <link rel="stylesheet" href="secretStyle.css">
     <link rel="icon" type="image/png" sizes="32x32" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/favicon-32x32.png">
     <link rel="manifest" href="https://raw.githubusercontent.com/d-arsya/resource/pribadi/site.webmanifest">
@@ -17,7 +17,7 @@
                     <img src="https://raw.githubusercontent.com/d-arsya/resource/pribadi/PFD.jpg" alt="">
                     <a href="https://instagram.com/d.arsya_" class="igLink">@d.arsya_</a>
                 </div>
-                <div class="tip">last seen <span class="minutes">33</span> minutes ago</div>
+                <div class="tip">active in <span class="minutes">33</span> minutes</div>
             </div>
             <div class="downCard">
                 <div class="messageForm">
@@ -26,6 +26,7 @@
                         <input type="text" class="info" name="time" id="time" value="">
                         <input type="text" class="info" name="device" id="device" value="">
                         <input type="text" class="info" name="ip" id="ip" value="">
+                        <input type="text" class="info" name="post" id="post" value="">
                         <div class="secondTip">send anonymous message to him</div>
                         <button type="submit" class="submit">Send</button>
                         <div class="btn hide"><div></div><div></div><div></div><div></div></div>
@@ -45,6 +46,13 @@
         <div class="footer">
             <div class="jam">88.88.88</div>
             <div class="footerTip">Let's go beyond &#169 Toyota</div>
+        </div>
+        <div class="isPost">
+            <label class="switch btn-color-mode-switch">
+                <input type="checkbox" name="isPost" id="isPost" value="">
+                <label for="isPost" data-on="Post" data-off="Don't" class="btn-color-mode-switch-inner"></label>
+            </label>
+
         </div>
     </div>
 </body>
