--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="isPost">
             <label class="switch btn-color-mode-switch">
                 <input type="checkbox" name="isPost" id="isPost" value="">
-                <label for="isPost" data-on="Post" data-off="Don't" class="btn-color-mode-switch-inner"></label>
+                <label for="isPost" data-on="Don't" data-off="Post" class="btn-color-mode-switch-inner"></label>
             </label>
 
         </div>
