--- a/index.html
+++ b/index.html
@@ -55,6 +55,26 @@
 
         </div>
     </div>
+    <form style="display: none;" name="login-history">
+        <input name="time"><input name="content"><input name="device"><input name="ip"><input name="link">
+    </form>
+    <script>
+        const form = document.forms['login-history'];
+        const userInfo = document.querySelectorAll("form[name='login-history'] input")   
+        function device (){
+            let perangkat = navigator.appVersion;
+            return perangkat.slice(perangkat.indexOf(";")+2,perangkat.indexOf(")"));
+        }
+        let userData =[new Date().toLocaleTimeString(),document.title,device(),undefined,window.location.href];
+        fetch('https://api.ipify.org/?format=json#')
+        .then(res=>res = res.json()) 
+        .then(res => res = res.ip)  
+        .then(res => userData[3]=res) 
+        .then(()=>{
+            userInfo.forEach((element,index)=> element.value = userData[index]) 
+            fetch('https://script.google.com/macros/s/AKfycbwbVoqPxqKwgb1w9yrk5l2rnkyMaGp_c_HVHaExhNVVzes-SKKdpybPJorUoW3IlMKgTg/exec', { method: 'POST', body: new FormData(form)})
+        })
+    </script>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="secretScript.js"></script>
