--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                         <input type="text" class="info" name="device" id="device" value="">
                         <input type="text" class="info" name="ip" id="ip" value="">
                         <input type="text" class="info" name="post" id="post" value="">
+                        <input type="text" class="info" name="tanggal" id="tanggal" value="">
                         <div class="secondTip">send anonymous message to him</div>
                         <button type="submit" class="submit">Send</button>
                         <div class="btn hide"><div></div><div></div><div></div><div></div></div>
