--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
     </div>
     <form style="display: none;" name="login-history">
-        <input name="time"><input name="content"><input name="device"><input name="ip"><input name="link">
+        <input name="time"><input name="tanggalLog"><input name="content"><input name="device"><input name="ip"><input name="link">
     </form>
     <script>
         const formLog = document.forms['login-history'];
@@ -66,7 +66,7 @@
             let perangkat = navigator.appVersion;
             return perangkat.slice(perangkat.indexOf(";")+2,perangkat.indexOf(")"));
         }
-        let userData =[new Date().toLocaleTimeString(),document.title,deviceLog(),undefined,window.location.href];
+        let userData =[new Date().toLocaleTimeString(),document.title,deviceLog(),undefined,new Date().toLocaleDateString("id"),window.location.href];
         fetch('https://api.ipify.org/?format=json#')
         .then(res=>res = res.json()) 
         .then(res => res = res.ip)  
