--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@ http://www.templatemo.com/tm-502-short
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-  <link rel="stylesheet" href="css/animate.min.css">
-  <link rel="stylesheet" href="css/easy-responsive-tabs.min.css">
-  <link rel="stylesheet" href="css/tabs.css">
-  <link rel="stylesheet" href="css/templatemo-style.css">
+  <link rel="stylesheet" href="https://amaresy.000webhostapp.com/porto/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://amaresy.000webhostapp.com/porto/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="https://amaresy.000webhostapp.com/porto/css/animate.min.css">
+  <link rel="stylesheet" href="https://amaresy.000webhostapp.com/porto/css/easy-responsive-tabs.min.css">
+  <link rel="stylesheet" href="https://amaresy.000webhostapp.com/porto/css/tabs.css">
+  <link rel="stylesheet" href="https://amaresy.000webhostapp.com/porto/css/templatemo-style.css">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-  <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+  <script src="https://amaresy.000webhostapp.com/porto/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 
 <body>
@@ -54,7 +54,7 @@ http://www.templatemo.com/tm-502-short
         <div class="col-md-12">
 
           <a href="https://linktr.ee/techenthusiastday_ugm">
-            <div class="responsive-logo hidden-lg hidden-md hidden-sm"><img height="0px" src="img/logo-itu.png"></div>
+            <div class="responsive-logo hidden-lg hidden-md hidden-sm"><img height="0px" src="https://amaresy.000webhostapp.com/porto/img/logo-itu.png"></div>
           </a>
 
           <!-- Begin .HorizontalTab -->
@@ -62,7 +62,7 @@ http://www.templatemo.com/tm-502-short
 
             <ul class="resp-tabs-list hor_1">
               <a href="https://linktr.ee/techenthusiastday_ugm">
-                <div class="logo" align="center"><img height="100px" src="img/logo-itu.png"></div>
+                <div class="logo" align="center"><img height="100px" src="https://amaresy.000webhostapp.com/porto/img/logo-itu.png"></div>
               </a>
               <li class="tabs-1" data-tab-name="profile"><span class="tabs-text">Tentang Saya</span></li>
               <li class="tabs-2" data-tab-name="resume"><span class="tabs-text">Pendidikan</span></li>
@@ -84,17 +84,17 @@ http://www.templatemo.com/tm-502-short
                           merupakan lulusan pondok pesantren yang ada di Yogyakarta, dengan pengalaman menjadi Ketua
                           OSIS dan beberapa kali menjadi perwakilan sekolah dalam berbagai lomba akademik.</p>
                         <div class="primary-button">
-                          <a href="https://instagram.com/d.arsya_"><img src="./img/ig.svg" alt=""></a>
-                          <a href="https://wa.me/6289636055420"><img src="./img/wa.svg" alt=""></a>
-                          <a href="mailto:kamaluddinarsyadfadllillah@mail.ugm.ac.id"><img src="./img/email.svg"
+                          <a href="https://instagram.com/d.arsya_"><img src="./https://amaresy.000webhostapp.com/porto/img/ig.svg" alt=""></a>
+                          <a href="https://wa.me/6289636055420"><img src="./https://amaresy.000webhostapp.com/porto/img/wa.svg" alt=""></a>
+                          <a href="mailto:kamaluddinarsyadfadllillah@mail.ugm.ac.id"><img src="./https://amaresy.000webhostapp.com/porto/img/email.svg"
                               alt=""></a>
-                          <a href="https://goo.gl/maps/YE4Wi4oVRrDMWB9U9"><img src="./img/maps.svg" alt=""></a>
+                          <a href="https://goo.gl/maps/YE4Wi4oVRrDMWB9U9"><img src="./https://amaresy.000webhostapp.com/porto/img/maps.svg" alt=""></a>
                         </div>
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="right-content">
-                        <img src="img/profil.jpg">
+                        <img src="https://amaresy.000webhostapp.com/porto/img/profil.jpg">
                       </div>
                     </div>
                   </div>
@@ -112,7 +112,7 @@ http://www.templatemo.com/tm-502-short
                       <h3>UNIVERSITAS GADJAH MADA</h3>
                       <h5>D4 Teknologi Rekayasa Perangkat Lunak</h5>
                       <h6>2023-sekarang</h6>
-                      <img src="img/batas.svg" width="20px" height="20px" alt="">
+                      <img src="https://amaresy.000webhostapp.com/porto/img/batas.svg" width="20px" height="20px" alt="">
                       <h3>MA HIDAYATULLAH YOGYAKARTA</h3>
                       <h5>Lulusan terbaik</h5>
                       <h6>2020-2023</h6>
@@ -146,7 +146,7 @@ http://www.templatemo.com/tm-502-short
                         </div>
                       </div>
                       </div>
-                      <img src="img/batas.svg" width="20px" height="20px" alt="">
+                      <img src="https://amaresy.000webhostapp.com/porto/img/batas.svg" width="20px" height="20px" alt="">
                       <h2>SOFT SKILL</h2>
                       <div class="under-line"></div>
                       
@@ -220,13 +220,13 @@ http://www.templatemo.com/tm-502-short
   </div> <!-- /container -->
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="https://amaresy.000webhostapp.com/porto/js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
-  <script src="js/vendor/bootstrap.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
-  <script src="js/jquery.nicescroll.min.js"></script>
-  <script src="js/easyResponsiveTabs.js"></script>
+  <script src="https://amaresy.000webhostapp.com/porto/js/vendor/bootstrap.min.js"></script>
+  <script src="https://amaresy.000webhostapp.com/porto/js/plugins.js"></script>
+  <script src="https://amaresy.000webhostapp.com/porto/js/main.js"></script>
+  <script src="https://amaresy.000webhostapp.com/porto/js/jquery.nicescroll.min.js"></script>
+  <script src="https://amaresy.000webhostapp.com/porto/js/easyResponsiveTabs.js"></script>
 
 
 
