--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@ http://www.templatemo.com/tm-502-short
                           merupakan lulusan pondok pesantren yang ada di Yogyakarta, dengan pengalaman menjadi Ketua
                           OSIS dan beberapa kali menjadi perwakilan sekolah dalam berbagai lomba akademik.</p>
                         <div class="primary-button">
-                          <a href="https://instagram.com/d.arsya_"><img src="./https://amaresy.000webhostapp.com/porto/img/ig.svg" alt=""></a>
-                          <a href="https://wa.me/6289636055420"><img src="./https://amaresy.000webhostapp.com/porto/img/wa.svg" alt=""></a>
-                          <a href="mailto:kamaluddinarsyadfadllillah@mail.ugm.ac.id"><img src="./https://amaresy.000webhostapp.com/porto/img/email.svg"
+                          <a href="https://instagram.com/d.arsya_"><img src="https://amaresy.000webhostapp.com/porto/img/ig.svg" alt=""></a>
+                          <a href="https://wa.me/6289636055420"><img src="https://amaresy.000webhostapp.com/porto/img/wa.svg" alt=""></a>
+                          <a href="mailto:kamaluddinarsyadfadllillah@mail.ugm.ac.id"><img src="https://amaresy.000webhostapp.com/porto/img/email.svg"
                               alt=""></a>
-                          <a href="https://goo.gl/maps/YE4Wi4oVRrDMWB9U9"><img src="./https://amaresy.000webhostapp.com/porto/img/maps.svg" alt=""></a>
+                          <a href="https://goo.gl/maps/YE4Wi4oVRrDMWB9U9"><img src="https://amaresy.000webhostapp.com/porto/img/maps.svg" alt=""></a>
                         </div>
                       </div>
                     </div>
