--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ http://www.templatemo.com/tm-502-short
                       <h2>KEPANITIAAN</h2>
                       <div class="under-line"></div>
                       
-                      <h5>Action Plan - Bendahara Umum (2023)</h5>
+                      <h5>Tech Enthusiast Day - Divisi Acara (2023)</h5>
                       <h5>Pandu Festival Day #9 - Ketua (2022)</h5>
                       <h5>Islamic Super Camp #5 - Ketua (2021)</h5>
                     </div>
