--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Stopwatch LF</title>
+    <title>Bootstrap demo</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -144,7 +144,9 @@
           m += 1;
           s = 0;
         }
-        stopOne.innerHTML = `${m} : ${s} : ${ms}`;
+        stopOne.innerHTML = `${m.toString().padStart(2, "0")} : ${s
+          .toString()
+          .padStart(2, "0")} : ${ms.toString().padStart(2, "0")}`;
       }
       function stopwatchTwo() {
         ms += 1;
@@ -156,7 +158,9 @@
           m += 1;
           s = 0;
         }
-        stopTwo.innerHTML = `${m} : ${s} : ${ms}`;
+        stopTwo.innerHTML = `${m.toString().padStart(2, "0")} : ${s
+          .toString()
+          .padStart(2, "0")} : ${ms.toString().padStart(2, "0")}`;
       }
     </script>
   </body>
