--- a/index.html
+++ b/index.html
@@ -1,1 +1,162 @@
-404
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Bootstrap demo</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="container text-center py-5">
+      <div class="row">
+        <div class="col-sm-6 mt-3 mt-sm-0">
+          <div class="card">
+            <div class="card-body">
+              <select
+                class="form-select mb-3 text-center"
+                aria-label="Default select example"
+              >
+                <option selected>Nama Tim</option>
+                <option value="1">Bleged</option>
+                <option value="2">B</option>
+                <option value="3">C</option>
+              </select>
+              <h3 class="timeStop">00 : 00 : 00</h3>
+              <input type="checkbox" style="display: none" />
+              <label
+                ><div
+                  class="btn btn-warning pinButton"
+                  style="visibility: hidden"
+                >
+                  Checkpoint
+                </div></label
+              >
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 mt-3 mt-sm-0">
+          <div class="card">
+            <div class="card-body">
+              <select class="form-select mb-3 text-center">
+                <option selected>Nama Tim</option>
+                <option value="1">Voit</option>
+                <option value="2">B</option>
+                <option value="3">C</option>
+              </select>
+              <h3 class="timeStop">00 : 00 : 00</h3>
+              <input type="checkbox" style="display: none" />
+              <label
+                ><div
+                  class="btn btn-warning pinButton"
+                  style="visibility: hidden"
+                >
+                  Checkpoint
+                </div></label
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row py-5" id="startButton">
+        <div class="col-sm-12 mt-3 mt-sm-0">
+          <div class="card">
+            <div class="card-body">
+              <h3>Mulai</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container text-center">
+      <div class="row">
+        <div class="col-sm-6 mt-3 mt-sm-0">
+          <div class="col-sm-12 mt-3 mt-sm-0 cekText"></div>
+        </div>
+        <div class="col-sm-6 mt-3 mt-sm-0 cekText"></div>
+      </div>
+    </div>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+      integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      const timeStop = document.querySelectorAll(".timeStop");
+const cekText = document.querySelectorAll(".cekText");
+const pinButton = document.querySelectorAll(".pinButton");
+const startButton = document.getElementById("startButton");
+let stopBut = 1;
+// tombol mulai
+startButton.addEventListener(
+  "click",
+  () => (stopBut = setInterval(stopwatch, 20))
+);
+
+// cekpoin awal
+let cekStat = [1, 1];
+
+// tombol cekpoin ditekan
+pinButton.forEach((i, f) => {
+  i.addEventListener("click", (e) => {
+    i.innerHTML == "Finish" ? finishButton(f) : console.log();
+    cekText[f].innerHTML +=
+      i.innerHTML == "Finish"
+        ? `<div class="card my-3 text-start"><div class="card-body"><h3>Finish</h3><h4>${timeStop[f].innerHTML}</h4></div></div>`
+        : `<div class="card my-3 text-start"><div class="card-body"><h3>Checkpoint ${cekStat[f]}</h3><h4>${timeStop[f].innerHTML}</h4></div></div>`;
+    cekStat[f] += 1;
+    i.innerHTML = cekStat[f] > 3 ? "Finish" : "Checkpoint";
+    selesai() ? clearInterval(stopBut) : console.log();
+  });
+});
+
+// tombol finish ditekan
+function finishButton(ind) {
+  let baru = document.createElement("h3");
+  baru.innerHTML = timeStop[ind].innerHTML;
+  timeStop[ind].parentNode.replaceChild(baru, timeStop[ind]);
+  pinButton[ind].style.display = "none";
+}
+
+// stopwatch awal
+let realTime = [0, 0, 0, 0];
+function stopwatch() {
+  realTime[0] += 1;
+  if (realTime[0] > 99) {
+    realTime[1] += 1;
+    realTime[0] = 0;
+  }
+  if (realTime[1] > 59) {
+    realTime[2] += 1;
+    realTime[1] = 0;
+  }
+  realTime[3] += 1;
+  console.log(realTime[3]);
+  timeStop.forEach(
+    (e) =>
+      (e.innerHTML = `${realTime[2].toString().padStart(2, "0")} : ${realTime[1]
+        .toString()
+        .padStart(2, "0")} : ${realTime[0].toString().padStart(2, "0")}`)
+  );
+  startButton.style.display = "none";
+  pinButton.forEach((e) => (e.style.visibility = "visible"));
+}
+
+function selesai() {
+  let startu = true;
+  pinButton.forEach((e) => (startu = e.style.display == "none" ? true : false));
+  return startu;
+}
+
+    </script>
+  </body>
+</html>
